plugins {
	id "java"
	id "application"
}

application {
	mainClass.set("com.gmail.berndivader.heewhomee.HeeWhooMee");
}

java {
	toolchain.languageVersion.set(JavaLanguageVersion.of(11))
}

repositories {
	mavenCentral()
}

configurations {
    compileClasspath.extendsFrom(supplied)
}

dependencies {
	supplied 'io.github.furstenheim:copy_down:1.0'
	supplied 'com.google.code.gson:gson:+'
    supplied 'mysql:mysql-connector-java:8.0.15'
    supplied ("net.dv8tion:JDA:+") {
		exclude module: 'opus-java'
	}
	supplied 'org.slf4j:slf4j-simple:+' 
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    rootSpec.exclude('**/META-INF/*.SF','**/META-INF/*.RSA')
    
    manifest {
        attributes 'Main-Class': application.mainClass
    }

    from {
        configurations.supplied.asFileTree.files.collect { zipTree(it) }
    }
}